added readme, fixed some tests

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=WeRoaDaje
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:dzCZk8lwHQenXHVllbKnhRhXd9n55pBRIzd8+EYK0HM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_weroadaje
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
